[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://MemoryMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Memory.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 232.25, 12.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 181.625, 64.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29.25, 208.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 60, 112 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 46.5, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 87, 38.25 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 61.75, 57.25 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 61.5, 42.25 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 19.125, 14.5 )

[node name="Memory" type="Node2D"]
script = ExtResource( 3 )

[node name="MemoryMap" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 491, 0 )

[node name="WinPlane" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinPlane"]
position = Vector2( 525.75, 543.5 )
shape = SubResource( 1 )

[node name="KillPlane1" type="Area2D" parent="."]
position = Vector2( -184, 298 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 756.625, -129.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 482.75, 13.75 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 549, 111 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 659, 112 )
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 758, -7.25 )
shape = SubResource( 6 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 877.25, 82.75 )
shape = SubResource( 7 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 828, 181.25 )
shape = SubResource( 8 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 638.875, 203 )
shape = SubResource( 9 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="KillPlane1"]
position = Vector2( 737, 203 )
shape = SubResource( 9 )

[connection signal="body_entered" from="WinPlane" to="." method="_on_WinPlane_body_entered"]
[connection signal="body_entered" from="KillPlane1" to="." method="_on_KillPlane1_body_entered"]
